--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- SEO base -->
   <meta name="theme-color" content="#2f2f2f" />
-  <link rel="icon" type="image/png" href="/logopaulo.png" />
+  <link rel="icon" type="image/png" href="logopaulo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
@@ -64,9 +64,6 @@
         <a href="#servicos" class="hover:opacity-80" style="color:var(--ink)">Serviços</a>
         <a href="#galeria" class="hover:opacity-80" style="color:var(--ink)">Galeria</a>
         <a href="#contato" class="hover:opacity-80" style="color:var(--ink)">Contato</a>
-        <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20avaliação" class="ml-2 inline-flex items-center gap-2 rounded-full px-4 py-2 hover:shadow" style="border:1px solid var(--taupe); color:var(--ink)">
-          Agendar
-        </a>
       </nav>
     </div>
   </header>
@@ -76,32 +73,15 @@
     <div class="absolute inset-0 -z-10" style="background: linear-gradient(to bottom, var(--sand), #ffffff)"></div>
     <div class="max-w-7xl mx-auto px-6 py-16 md:py-24 grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <span class="inline-flex items-center gap-2 font-medium tracking-wide" style="color:var(--taupe)">
-          <span class="h-1.5 w-1.5 rounded-full" style="background:var(--taupe)"></span>
-          Excelência médica com acolhimento e ciência
-        </span>
         <h1 class="mt-4 font-serif text-4xl md:text-5xl" style="color:var(--ink)">Saúde mental com segurança, acolhimento e respeito ao seu tempo.</h1>
         <p class="mt-4 leading-relaxed max-w-xl text-zinc-600">Psiquiatria clínica para adultos, com diagnóstico preciso, tratamento baseado em evidências e acompanhamento próximo — presencial ou por telemedicina.</p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20avaliação" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar avaliação</a>
-          <a href="#servicos" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">Conhecer serviços</a>
-        </div>
-        <div class="mt-8 flex items-center gap-6 text-sm text-zinc-500">
-          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Atendimento humanizado</div>
-          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Baseado em evidências</div>
-          <div class="flex items-center gap-2"><div class="h-2 w-2 rounded-full" style="background:var(--taupe)"></div> Sigilo e acompanhamento</div>
         </div>
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-2xl overflow-hidden shadow border" style="border-color:var(--line); background:#fff">
-          <img src="./drpaulo.jpg" alt="Dr. Paulo Donadel" class="h-full w-full object-cover" loading="eager"/>
-        </div>
-        <div class="absolute -bottom-6 -left-6 bg-white shadow border rounded-2xl p-4 flex items-center gap-3" style="border-color:var(--line)">
-          <div class="h-10 w-10 rounded-full grid place-content-center" style="background:var(--sand); color:var(--taupe)">★</div>
-          <div class="text-sm">
-            <p class="font-semibold" style="color:var(--ink)">+1.200 pacientes acompanhados</p>
-            <p class="text-zinc-500">Consultas presenciais e telemedicina</p>
-          </div>
+          <img src="drpaulo.jpg" alt="Dr. Paulo Donadel" class="h-full w-full object-cover" loading="eager"/>
         </div>
       </div>
     </div>
@@ -112,14 +92,7 @@
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-14 items-center">
       <div class="order-2 md:order-1">
         <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Sobre o médico</h2>
-        <div class="mt-4 prose prose-zinc max-w-none">
-          <p>O <strong>Dr. Paulo Donadel</strong> é médico psiquiatra (CRM 37848 RS) com residência médica e atualização contínua. Atua com abordagem integrada, aliando psicoterapia baseada em evidências e psicofármacos quando indicados.</p>
-          <ul>
-            <li>Membro de sociedades médicas e participação em congressos.</li>
-            <li>Plano terapêutico individualizado e centrado na pessoa.</li>
-            <li>Seguimento próximo com reavaliações periódicas.</li>
-          </ul>
-        </div>
+        <p class="mt-4">O <strong>Dr. Paulo Donadel</strong> é médico psiquiatra (CRM 37848 RS) com residência médica e atualização contínua. Atua com abordagem integrada, aliando psicoterapia baseada em evidências e psicofármacos quando indicados.</p>
         <div class="mt-6 grid sm:grid-cols-3 gap-4">
           <div class="rounded-xl border p-4" style="border-color:var(--line)">
             <p class="text-2xl font-semibold" style="color:var(--ink)">12+</p>
@@ -129,15 +102,11 @@
             <p class="text-2xl font-semibold" style="color:var(--ink)">1.200+</p>
             <p class="text-sm text-zinc-500">pacientes acompanhados</p>
           </div>
-          <div class="rounded-xl border p-4" style="border-color:var(--line)">
-            <p class="text-2xl font-semibold" style="color:var(--ink)">Alta</p>
-            <p class="text-sm text-zinc-500">adesão ao tratamento</p>
-          </div>
         </div>
       </div>
       <div class="order-1 md:order-2">
         <div class="aspect-[16/10] rounded-2xl overflow-hidden shadow border bg-white" style="border-color:var(--line)">
-          <img src="logodrpaulo.png" alt="Logo Dr. Paulo Donadel" class="h-full w-full object-contain bg-white" loading="lazy"/>
+          <img src="logodrpaulo.png" alt="Logo Dr. Paulo Donadel" class="h-full w-full object-contain bg-white"/>
         </div>
       </div>
     </div>
@@ -148,70 +117,69 @@
   <!-- Serviços -->
   <section id="servicos" class="py-16 md:py-24">
     <div class="max-w-7xl mx-auto px-6">
-      <div class="flex items-end justify-between gap-4">
-        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Serviços</h2>
-      </div>
-      <p class="mt-3 text-zinc-600 max-w-2xl">Diagnóstico preciso e plano terapêutico individualizado, com foco em qualidade de vida e funcionalidade.</p>
+      <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Serviços</h2>
       <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?doctor,consultation" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">Avaliação psiquiátrica</h3>
-            <p class="mt-1 text-sm text-zinc-600">Escuta qualificada, diagnóstico e plano terapêutico personalizado.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1580281657521-54c01d2ed9a7?auto=format&fit=crop&w=800&q=80" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">Avaliação psiquiátrica</h3></div>
         </article>
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?mental-health" alt="Ansiedade e depressão" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">Ansiedade & depressão</h3>
-            <p class="mt-1 text-sm text-zinc-600">Tratamento baseado em evidências, psicoterapia e medicação quando indicada.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?auto=format&fit=crop&w=800&q=80" alt="Ansiedade e depressão" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">Ansiedade & depressão</h3></div>
         </article>
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?adhd,brain" alt="TDAH em adultos" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">TDAH em adultos</h3>
-            <p class="mt-1 text-sm text-zinc-600">Avaliação estruturada e manejo terapêutico multimodal.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1559757175-5700dde675c5?auto=format&fit=crop&w=800&q=80" alt="TDAH em adultos" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">TDAH em adultos</h3></div>
         </article>
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?bipolar,psychology" alt="Transtorno bipolar" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">Transtorno bipolar</h3>
-            <p class="mt-1 text-sm text-zinc-600">Estabilização do humor e prevenção de recaídas.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1604881991720-822b646a8852?auto=format&fit=crop&w=800&q=80" alt="Transtorno bipolar" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">Transtorno bipolar</h3></div>
         </article>
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?addiction,recovery" alt="Dependência química" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">Dependência química</h3>
-            <p class="mt-1 text-sm text-zinc-600">Estratégias de redução de danos e reabilitação com rede de apoio.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1551843078-327c5e7d4c2a?auto=format&fit=crop&w=800&q=80" alt="Dependência química" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">Dependência química</h3></div>
         </article>
-        <article class="rounded-2xl border overflow-hidden bg-white hover:shadow transition" style="border-color:var(--line)">
-          <img src="https://source.unsplash.com/600x400/?telemedicine,online" alt="Telemedicina" class="h-44 w-full object-cover" loading="lazy"/>
-          <div class="p-5">
-            <h3 class="text-lg font-semibold" style="color:var(--ink)">Telemedicina</h3>
-            <p class="mt-1 text-sm text-zinc-600">Consultas on-line com sigilo e qualidade, conforme regulamentação vigente.</p>
-          </div>
+        <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
+          <img src="https://images.unsplash.com/photo-1588776814546-5e20eae04c44?auto=format&fit=crop&w=800&q=80" alt="Telemedicina" class="h-44 w-full object-cover"/>
+          <div class="p-5"><h3 class="text-lg font-semibold">Telemedicina</h3></div>
         </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- Galeria -->
-  <section id="galeria" class="py-16 md:py-24" style="background:var(--sand)">
-    <div class="max-w-7xl mx-auto px-6">
-      <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Galeria do consultório</h2>
-      <p class="mt-3 text-zinc-600 max-w-2xl">Fotos reais do consultório (sem identificação de pacientes), em conformidade com o CFM e a LGPD.</p>
-      <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio1.jpg" alt="Consultório — recepção" loading="lazy"/>
-        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio2.jpg" alt="Consultório — sala de atendimento" loading="lazy"/>
-        <img class="h-64 w-full object-cover rounded-xl border" style="border-color:var(--line)" src="consultorio3.jpg" alt="Consultório — detalhes" loading="lazy"/>
       </div>
     </div>
   </section>
 
   <!-- Contato -->
   <section id="contato" class="py-16 md:py-24" style="background:#faf9f7">
-    <div class="max-w
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
+      <div>
+        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Vamos conversar</h2>
+        <p class="mt-3 text-zinc-700 max-w-xl">Agende sua consulta presencial ou por telemedicina. Respeito, ética e sigilo profissional.</p>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar pelo WhatsApp</a>
+          <a href="mailto:contato@exemplo.com" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">contato@exemplo.com</a>
+        </div>
+      </div>
+      <div class="rounded-2xl border overflow-hidden shadow bg-white p-6" style="border-color:var(--line)">
+        <form class="grid gap-4">
+          <div class="grid md:grid-cols-2 gap-4">
+            <input class="rounded-lg border px-4 py-3" placeholder="Nome" />
+            <input class="rounded-lg border px-4 py-3" placeholder="E-mail" type="email" />
+          </div>
+          <input class="rounded-lg border px-4 py-3" placeholder="Telefone" />
+          <textarea class="rounded-lg border px-4 py-3" rows="4" placeholder="Mensagem"></textarea>
+          <button class="rounded-lg px-5 py-3" style="background:var(--taupe); color:#fff">Enviar mensagem</button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer class="py-10 text-center text-sm text-zinc-500">
+    <div class="max-w-7xl mx-auto px-6">
+      © <span id="y"></span> Dr. Paulo Donadel — Psiquiatria & Saúde Mental. CRM 37848 RS.
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
