--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="hidden md:block" style="background: var(--sand)">
     <div class="max-w-7xl mx-auto px-6 py-2 flex items-center justify-between text-sm grain">
       <p class="text-zinc-600">CRM 37848 RS — Psiquiatria & Saúde Mental</p>
-      <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20avaliação" class="inline-flex items-center gap-2 font-medium" style="color:var(--ink)">
+      <a href="https://wa.me/5553991633352?text=Ol%C3%A1,%20gostaria%20de%20agendar%20uma%20avalia%C3%A7%C3%A3o" class="inline-flex items-center gap-2 font-medium" style="color:var(--ink)">
         Agende sua avaliação
       </a>
     </div>
@@ -64,6 +64,9 @@
         <a href="#servicos" class="hover:opacity-80" style="color:var(--ink)">Serviços</a>
         <a href="#galeria" class="hover:opacity-80" style="color:var(--ink)">Galeria</a>
         <a href="#contato" class="hover:opacity-80" style="color:var(--ink)">Contato</a>
+        <a href="https://wa.me/5553991633352?text=Ol%C3%A1,%20gostaria%20de%20agendar%20uma%20avalia%C3%A7%C3%A3o" class="ml-2 inline-flex items-center gap-2 rounded-full px-4 py-2 hover:shadow" style="border:1px solid var(--taupe); color:var(--ink)">
+          WhatsApp
+        </a>
       </nav>
     </div>
   </header>
@@ -76,7 +79,7 @@
         <h1 class="mt-4 font-serif text-4xl md:text-5xl" style="color:var(--ink)">Saúde mental com segurança, acolhimento e respeito ao seu tempo.</h1>
         <p class="mt-4 leading-relaxed max-w-xl text-zinc-600">Psiquiatria clínica para adultos, com diagnóstico preciso, tratamento baseado em evidências e acompanhamento próximo — presencial ou por telemedicina.</p>
         <div class="mt-6 flex flex-wrap gap-3">
-          <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20avaliação" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar avaliação</a>
+          <a href="https://wa.me/5553991633352?text=Ol%C3%A1,%20gostaria%20de%20agendar%20uma%20avalia%C3%A7%C3%A3o" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar pelo WhatsApp</a>
         </div>
       </div>
       <div class="relative">
@@ -127,49 +130,49 @@
 
   <div class="divider max-w-7xl mx-auto"></div>
 
-  <!-- Serviços -->
+  <!-- Serviços (imagens de outra fonte: Pexels) -->
   <section id="servicos" class="py-16 md:py-24">
     <div class="max-w-7xl mx-auto px-6">
       <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Serviços</h2>
       <p class="mt-3 text-zinc-600 max-w-2xl">Diagnóstico preciso e plano terapêutico individualizado, com foco em qualidade de vida e funcionalidade.</p>
       <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1580281657521-54c01d2ed9a7?auto=format&fit=crop&w=1200&q=80" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/5699452/pexels-photo-5699452.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="Avaliação psiquiátrica" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Avaliação psiquiátrica</h3>
             <p class="mt-1 text-sm text-zinc-600">Escuta qualificada, diagnóstico e plano terapêutico personalizado.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?auto=format&fit=crop&w=1200&q=80" alt="Ansiedade e depressão" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/4101143/pexels-photo-4101143.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="Ansiedade e depressão" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Ansiedade & depressão</h3>
             <p class="mt-1 text-sm text-zinc-600">Tratamento baseado em evidências, psicoterapia e medicação quando indicada.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1559757175-5700dde675c5?auto=format&fit=crop&w=1200&q=80" alt="TDAH em adultos" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/8376230/pexels-photo-8376230.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="TDAH em adultos" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">TDAH em adultos</h3>
             <p class="mt-1 text-sm text-zinc-600">Avaliação estruturada e manejo terapêutico multimodal.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1604881991720-822b646a8852?auto=format&fit=crop&w=1200&q=80" alt="Transtorno bipolar" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/7176313/pexels-photo-7176313.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="Transtorno bipolar" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Transtorno bipolar</h3>
             <p class="mt-1 text-sm text-zinc-600">Estabilização do humor e prevenção de recaídas.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1551843078-327c5e7d4c2a?auto=format&fit=crop&w=1200&q=80" alt="Dependência química" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/5543635/pexels-photo-5543635.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="Dependência química" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Dependência química</h3>
             <p class="mt-1 text-sm text-zinc-600">Estratégias de redução de danos e reabilitação com rede de apoio.</p>
           </div>
         </article>
         <article class="rounded-2xl border overflow-hidden bg-white" style="border-color:var(--line)">
-          <img src="https://images.unsplash.com/photo-1588776814546-5e20eae04c44?auto=format&fit=crop&w=1200&q=80" alt="Telemedicina" class="h-44 w-full object-cover"/>
+          <img src="https://images.pexels.com/photos/4226264/pexels-photo-4226264.jpeg?auto=compress&cs=tinysrgb&w=1200&h=600&fit=crop" alt="Telemedicina" class="h-44 w-full object-cover"/>
           <div class="p-5">
             <h3 class="text-lg font-semibold" style="color:var(--ink)">Telemedicina</h3>
             <p class="mt-1 text-sm text-zinc-600">Consultas on-line com sigilo e qualidade, conforme regulamentação vigente.</p>
@@ -192,28 +195,18 @@
     </div>
   </section>
 
-  <!-- Contato -->
+  <!-- Contato: somente WhatsApp -->
   <section id="contato" class="py-16 md:py-24" style="background:#faf9f7">
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Vamos conversar</h2>
-        <p class="mt-3 text-zinc-700 max-w-xl">Agende sua consulta presencial ou por telemedicina. Respeito, ética e sigilo profissional.</p>
-        <div class="mt-6 flex flex-wrap gap-3">
-          <a href="https://wa.me/5551999999999?text=Olá,%20gostaria%20de%20agendar%20uma%20consulta" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="background:var(--ink); color:#fff">Agendar pelo WhatsApp</a>
-          <a href="mailto:contato@exemplo.com" class="inline-flex items-center gap-2 rounded-full px-5 py-3" style="border:1px solid var(--taupe); color:var(--ink)">contato@exemplo.com</a>
-        </div>
-        <p class="mt-6 text-sm text-zinc-600">Em caso de emergência psiquiátrica, procure atendimento imediato (SAMU 192) ou o <a class="underline" href="https://www.cvv.org.br/" target="_blank" rel="noopener">CVV 188</a>.</p>
+        <h2 class="font-serif text-3xl md:text-4xl" style="color:var(--ink)">Fale pelo WhatsApp</h2>
+        <p class="mt-3 text-zinc-700 max-w-xl">Atendimento presencial e por telemedicina. Respostas no horário comercial.</p>
+        <a href="https://wa.me/5553991633352?text=Ol%C3%A1,%20gostaria%20de%20agendar%20uma%20consulta" class="mt-6 inline-flex items-center gap-3 rounded-full px-6 py-3" style="background:var(--ink); color:#fff">
+          📱 (53) 99163-3352 — Enviar mensagem
+        </a>
       </div>
-      <div class="rounded-2xl border overflow-hidden shadow bg-white p-6" style="border-color:var(--line)">
-        <form class="grid gap-4">
-          <div class="grid md:grid-cols-2 gap-4">
-            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Nome" />
-            <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="E-mail" type="email" />
-          </div>
-          <input class="rounded-lg border px-4 py-3" style="border-color:var(--line)" placeholder="Telefone" />
-          <textarea class="rounded-lg border px-4 py-3" rows="4" style="border-color:var(--line)" placeholder="Mensagem"></textarea>
-          <button class="rounded-lg px-5 py-3" style="background:var(--taupe); color:#fff">Enviar mensagem</button>
-        </form>
+      <div class="rounded-2xl border overflow-hidden shadow bg-white p-6 text-zinc-600" style="border-color:var(--line)">
+        <p>Endereço e demais informações podem ser enviados pelo WhatsApp mediante solicitação.</p>
       </div>
     </div>
   </section>
